fix(tabs): inkbar is now visible in Firefox when using centered tabs
Closes #4367

--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -164,7 +164,6 @@ md-pagination-wrapper {
   &.md-center-tabs {
     position: relative;
     width: initial;
-    flex: 1;
     margin: 0 auto;
   }
 }
